--- a/h01.html
+++ b/h01.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="banner">
+            <img src=""
+        </div>
         <div class="header">
             <h1 class="logo">Veebibeebi.ee</h1>
         </div>
