--- a/h03.html
+++ b/h03.html
@@ -11,8 +11,12 @@
         <div class="header">
             <h1 class="logo">Veebilõust</h1>
         </div>
+        <div class="banner">
+            <img src="https://trianglify.io/p/w:1440!h:900!x:YlOrRd!v:0.558!c:0.118!s:xpngv!f:sp!i:0.30">
+        </div>
         <div class="nav">
             <ul>
+                <li><a href="#">Leht</a></li>
                 <li><a href="#">Leht</a></li>
                 <li><a href="#">Leht</a></li>
                 <li><a href="#">Leht</a></li>
@@ -26,17 +30,9 @@
             <hr>
             <h1>Lisa pilt</h1>
             <img src="https://picsum.photos/300/400" alt="picsum">
-            <h2>Loend</h2>
-            <ul>
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-                <li>lorem ipsum</li>
-            </ul>
         </div>
         <div class="footer">
-            <a href="#">Veebibeebi.ee</a>
+            <a href="#">Salvestamine on nõrkadele</a>
         </div>
     </div>
 </body>
