--- a/h03.html
+++ b/h03.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harjutus 03</title>
@@ -9,31 +10,30 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="logo">Veebilõust</h1>
         </div>
         <div class="banner">
-            <img src="https://trianglify.io/p/w:1440!h:900!x:YlOrRd!v:0.558!c:0.118!s:xpngv!f:sp!i:0.30">
+            <img src="">
+            <h1 class="logo">Veebilõust</h1>
         </div>
         <div class="nav">
             <ul>
-                <li><a href="#">Leht</a></li>
-                <li><a href="#">Leht</a></li>
-                <li><a href="#">Leht</a></li>
-                <li><a href="#">Leht</a></li>
-                <li><a href="#">Leht</a></li>
+                <li><a href="#">Avaleht</a></li>
+                <li><a href="#">Link1</a></li>
+                <li><a href="#">Link2</a></li>
+                <li><a href="#">Link3</a></li>
+                <li><a href="#">Link4</a></li>
             </ul> 
         </div>
         <div class="content">
             <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet <a href="#">suvaline link</a> consectetur adipisicing elit. Sint id enim quod debitis harum, aut, nisi in distinctio reiciendis repellat odit quia, explicabo vero provident exercitationem ad! Maiores, reiciendis nesciunt.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id enim quod debitis harum, aut, nisi in distinctio reiciendis repellat odit quia, explicabo vero provident exercitationem ad! Maiores, reiciendis nesciunt.</p>
-            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id enim quod debitis harum, aut, nisi in distinctio reiciendis repellat odit quia, explicabo vero provident exercitationem ad! Maiores, reiciendis nesciunt.</p>
             <h1>Lisa pilt</h1>
             <img src="https://picsum.photos/300/400" alt="picsum">
         </div>
-        <div class="footer">
-            <a href="#">Salvestamine on nõrkadele</a>
-        </div>
+    </div>
+    <div class="footer">
+        <a>Salvestamine on nõrkadele</a>
     </div>
 </body>
 </html>
