--- a/iseseisev_css.html
+++ b/iseseisev_css.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="et">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Iseseisevtöö</title>
+        <meta name="keywords" content="HTML,CSS,HTML5,CSS3">
+        <meta name="author" content="Kaspar Plaas IT-23">
+        <link rel="stylesheet" href="iseseisev.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
 
-<head>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iseseisev css</title>
-    <link rel="stylesheet" href="iseseisev.css">
-</head>
+    <body>
+        <div class="container">
 
-<body>
-    <div class="container">
-        <div class="nav">
-            <ul>
-                <li><a href="#">Avaleht</a></li>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-            </ul>
-        </div>
-        <div class="header">
-            <h1 class="logo">Veebilõust</h1>
-        </div>
-        <div class="content">
-            <h1>Lorem ipsum</h1>
-            <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id enim quod debitis harum, aut, nisi in
-                distinctio reiciendis repellat odit quia, explicabo vero provident exercitationem ad! Maiores,
-                reiciendis nesciunt.</b></p>
-            <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint id enim quod debitis harum, aut,
-                nisi in distinctio reiciendis repellat odit quia, explicabo vero provident exercitationem ad! Maiores,
-                reiciendis nesciunt.</p>
-            <img src="https://picsum.photos/200/300" alt="picsum">
-        </div>
-        <div class="footer">
-            <p>Salvestamine on nõrkadele</p>
-        </div>
-    </div>
-</body>
+            <header class="taust">
+                <nav class="menu">
+                    <ul>
+                        <li><a href="#">Avaleht</a></li>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                        <li><a href="#">Link 4</a></li>
+                    </ul>
+                </nav>
+    
+                <div class="banner">
+                    <h1>Veebilõust</h1>
+                    <p>Tristan Jugapuu</p>
+                    <button>Suvaline nupp</button>
+                </div>
+            </header>
 
+            <div class="content">
+                <div class="tekst">
+                    <h2>Lorem Ipsum</h2>
+                    <p class="bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odit, mollitia blanditiis incidunt quia pariatur voluptatem, modi recusandae maxime, maiores officia eos quibusdam debitis eius nesciunt iste. Quo, id ipsum!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                
+                <div class="pilt">
+                    <img src="https://picsum.photos/600/800" alt="imagination">
+                </div>
+            </div>
+
+            <footer class="footer">
+                <p>Salvestamine on nõrkadele</p>
+            </footer>
+
+        </div>
+    </body>
 </html>
